Waking up after a month. layout and index htmls modified.
[Client] - Introduced layout.html which will be the first login page.
[Client] - There are only 2 server-side htmls "index.html" and
"layout.html".
The rest should be part of views

--- a/web_client/public/js/tp/view/templates/LoginView.html
+++ b/web_client/public/js/tp/view/templates/LoginView.html
@@ -1,5 +1,5 @@
-<form method="get" >
+<form method="get" action="/layout">
 	<p>User: <input type="text" name="user" data-dojo-attach-point="userinput" /></p>
 	<p>Password: <input type="password" name="pwd" data-dojo-attach-point="pwdinput" /></p>
-	<input type="submit" value="Submit" />
+	<input type='submit' value='Submit'/>
 </form>
